--- a/install/kubernetes/templates/addons/zipkin.yaml.tmpl
+++ b/install/kubernetes/templates/addons/zipkin.yaml.tmpl
@@ -13,6 +13,7 @@ spec:
       annotations:
         sidecar.istio.io/inject: "false"
     spec:
+      serviceAccountName: zipkin
       containers:
       - name: zipkin
         image: docker.io/openzipkin/zipkin:latest
@@ -37,4 +38,10 @@ spec:
     port: 9411
   selector:
     app: zipkin
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: zipkin
+  namespace: {ISTIO_NAMESPACE}
 ---
