--- a/install/kubernetes/templates/istio-ca.yaml.tmpl
+++ b/install/kubernetes/templates/istio-ca.yaml.tmpl
@@ -35,4 +35,9 @@ spec:
           - --grpc-port=8060
           - --grpc-hostname=istio-ca
           - --self-signed-ca=true
+          - --logtostderr
+          - --stderrthreshold
+          - INFO
+        securityContext:
+          runAsUser: 1337
 ---
